@@ -24,8 +24,6 @@ import org.apache.kafka.common.utils.Exit;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 
@@ -55,12 +53,12 @@ public class DelegationTokenCommandTest {
 
         tokens = DelegationTokenCommand.describeToken(adminClient, getDescribeOpts(""));
         assertEquals(2, tokens.size());
-        assertEquals(Arrays.asList(token1, token2), tokens);
+        assertEquals(List.of(token1, token2), tokens);
 
         //get tokens for renewer2
         tokens = DelegationTokenCommand.describeToken(adminClient, getDescribeOpts(renewer2));
         assertEquals(1, tokens.size());
-        assertEquals(Collections.singletonList(token2), tokens);
+        assertEquals(List.of(token2), tokens);
 
         //test renewing tokens
         Long expiryTimestamp = DelegationTokenCommand.renewToken(adminClient, getRenewOpts(token1.hmacAsBase64String()));
